PYIC-8335: improve styling on event labels

--- a/journey-map/public/style.css
+++ b/journey-map/public/style.css
@@ -218,15 +218,22 @@ form fieldset p {
 #state-search {
   font-size: 1rem;
 }
-.journeyCtxTransition {
+#diagramSvg .edgeLabel p.journeyCtxTransition {
   background-color: #f5daa4;
 }
 .journeyCtxList {
   padding: 4px 24px 0;
 }
-.mitigationTransition {
-  background-color: #e4c4ff;
+#diagramSvg .edgeLabel p.mitigationTransition {
+  background-color: #ffbda8;
 }
-span.edgeLabel > p {
+.defaultEdgeLabel {
   text-wrap: wrap;
+  width: 100%;
+  border-bottom-width: 2px;
+  border-bottom-style: solid;
+  border-bottom-color: #9c9ca1;
+}
+span.edgeLabel .defaultEdgeLabel:last-child {
+  border-bottom: none;
 }
