PYIC-8593: Fix button styling

--- a/journey-map/public/style.css
+++ b/journey-map/public/style.css
@@ -88,10 +88,11 @@ form {
   gap: 8px;
 }
 form button {
-  padding: 4px 2px;
+  width: 100%;
 }
 
 #form-button {
+  padding: 4px 2px;
   background: black;
   color: white;
   width: 100%;
