--- a/journey-map/public/style.css
+++ b/journey-map/public/style.css
@@ -203,6 +203,11 @@ form fieldset p {
   filter: drop-shadow(1px 0 0 #ffdd00) drop-shadow(-1px 0 0 #ffdd00)
     drop-shadow(0 1px 0 #ffdd00) drop-shadow(0 -1px 0 #ffdd00);
 }
+#diagramSvg .highlightSelectedJourney {
+  stroke-width: 3px;
+  filter: drop-shadow(1px 0 0 #ff0000) drop-shadow(-1px 0 0 #ff0000)
+  drop-shadow(0 1px 0 #ff0000) drop-shadow(0 -1px 0 #ff0000);
+}
 #header-actions {
   margin-left: auto;
   display: flex;
