PYIC-8698: WIP highlight edge label with edge when selecting the event

--- a/journey-map/public/style.css
+++ b/journey-map/public/style.css
@@ -236,3 +236,6 @@ form fieldset p {
 span.edgeLabel .defaultEdgeLabel:last-child {
   border-bottom: none;
 }
+span.edgeLabelIdentifier {
+  text-shadow: 0.5px 0px 0px #555, -0.5px 0px 0px #555;
+}
